--- a/config/locales/restroom.en.yml
+++ b/config/locales/restroom.en.yml
@@ -22,6 +22,9 @@ en:
     not_accessible: 'Not accessible'
     changing_table: 'Changing table'
     no_changing_table: 'No changing table'
+    open: 'Open to public'
+    customer: 'Customers only'
+    keyed: 'Key required'
     type:
       unisex: 'Unisex / Gender neutral'
       single_stall: 'Gendered single stall or safe place'
